<resources>
    <string name="app_name">SatuanJumlah</string>
    <string name="jumlah">Jumlah </string>
    <string name="satuan">Satuan</string>
    <string name="Hitung">hitung</string>
    <string name="lusin">Lusin</string>
    <string name="gross">Gross</string>
    <string name="kodi">Kodi</string>
    <string name="rim">Rim</string>
    <string name="jumlahfragment">Jumlah Fragment</string>
    <string name="jumlahkeseluruhan">Jumlah Keseluruhan :<BR>  %1$.2f Buah </BR></string>
    <string name="about">
        <br> Aplikasi Ini Adalah Penghitungan jumlah Satuan, Diantaranya RIM, LUSIN, GROSS, KODI \n\n</br>

        <br> Aplikasi Ini Untuk Menghitung Berdasarkan Jumlah Satuan Yang Diinginkan Per buahnya. \n\n</br>

        <br> Temukan Aplikasi Ini Di https://github.com/rozyfauzan/hitung-jumlah-satuan.git.\n\n</br>

        <br> Selamat Mencoba.\n\n</br>
    </string>
    <string name="tentangaplikasi">Tentang Aplikasi</string>
    <string name="rumus">Kamus Rumus</string>
    <string name="isirumus">
        <br><br> Kamus Rumus : \n\n</br></br>
        <br> <br> 1 Lusin = 12 Buah \n\n</br></br>
        <br> <br> 1 Gross = 144 Buah \n\n</br></br>
        <br> <br> 1 Kodi = 20 Buah \n\n</br></br>
        <br> <br>  1 Rim = 500 Buah \n\n</br></br>

    </string>
    <string name="share">Bagikan</string>

    <string name="bagikan_pack">Jumlah: %1$s \nSatuan: %2$s \n %3$s\n\n</string>
    <string name="note">Note</string>
    <string name="tambah">Tambah</string>
    <string name="tambahcatatan">Tambah Catatan</string>
    <string name="catatan">Catatan</string>
    <string name="LihatCatatan">Lihat Catatan</string>
    <string name="koneksikeinternet">Koneksi Ke Internet</string>
    <string name="koneksi_error">Koneksi Error</string>

</resources>