<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_mainnote"
        android:title="@string/LihatCatatan"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_tambahnote"
        android:title="Tambah Catatan"
        app:showAsAction="never" />


    <item
        android:id="@+id/menu_rumus"
        android:title="@string/rumus"
        app:showAsAction="never"
        />


    <item
        android:id="@+id/menu_about"
        android:title="@string/tentangaplikasi"
        app:showAsAction="never"
        />


    <item
        android:id="@+id/menu_internet"
        android:title="@string/koneksikeinternet"
        app:showAsAction="never"
        />


</menu>