<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/jumlahtextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/jumlah"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/jumlaheditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="@+id/jumlahtextView"
            app:layout_constraintStart_toEndOf="@+id/jumlahtextView"
            app:layout_constraintTop_toTopOf="@+id/jumlahtextView"
            android:text="0"/>

        <TextView
            android:id="@+id/satuan_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="120dp"
            android:text="Satuan"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/jumlahtextView" />

        <Button
            android:id="@+id/hitungbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="32dp"
            android:text="@string/Hitung"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

        <Button
            android:id="@+id/sharebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/share"
            app:layout_constraintBottom_toBottomOf="@+id/hitungbutton"
            app:layout_constraintStart_toEndOf="@+id/hitungbutton"
            app:layout_constraintTop_toTopOf="@+id/hitungbutton" />

        <TextView
            android:id="@+id/jumlahkeseluruhan_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:freezesText="true"
            android:text="@string/jumlahkeseluruhan"
            app:layout_constraintBottom_toTopOf="@+id/rumusButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hitungbutton" />

        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            app:layout_constraintBottom_toBottomOf="@+id/satuan_textView"
            app:layout_constraintStart_toEndOf="@+id/satuan_textView"
            app:layout_constraintTop_toTopOf="@+id/satuan_textView">

            <RadioButton
                android:id="@+id/lusinRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lusin" />

            <RadioButton
                android:id="@+id/grossRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gross" />

            <RadioButton
                android:id="@+id/kodiRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kodi" />

            <RadioButton
                android:id="@+id/rim_Radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rim" />

        </RadioGroup>

        <Button
            android:id="@+id/rumusButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/rumus"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/jumlahkeseluruhan_textview" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>